@@ -3,7 +3,6 @@ package fr.vmz.jhipster.petclinic.repository;
 import fr.vmz.jhipster.petclinic.domain.Vet;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -24,7 +23,7 @@ public class VetRepositoryWithBagRelationshipsImpl implements VetRepositoryWithB
 
     @Override
     public Optional<Vet> fetchBagRelationships(Optional<Vet> vet) {
-        return vet.map(this::fetchSpecialties);
+        return vet.map(this::fetchSpecialtieses);
     }
 
     @Override
@@ -34,24 +33,24 @@ public class VetRepositoryWithBagRelationshipsImpl implements VetRepositoryWithB
 
     @Override
     public List<Vet> fetchBagRelationships(List<Vet> vets) {
-        return Optional.of(vets).map(this::fetchSpecialties).orElse(Collections.emptyList());
+        return Optional.of(vets).map(this::fetchSpecialtieses).orElse(List.of());
     }
 
-    Vet fetchSpecialties(Vet result) {
+    Vet fetchSpecialtieses(Vet result) {
         return entityManager
-            .createQuery("select vet from Vet vet left join fetch vet.specialties where vet.id = :id", Vet.class)
+            .createQuery("select vet from Vet vet left join fetch vet.specialtieses where vet.id = :id", Vet.class)
             .setParameter(ID_PARAMETER, result.getId())
             .getSingleResult();
     }
 
-    List<Vet> fetchSpecialties(List<Vet> vets) {
+    List<Vet> fetchSpecialtieses(List<Vet> vets) {
         HashMap<Object, Integer> order = new HashMap<>();
         IntStream.range(0, vets.size()).forEach(index -> order.put(vets.get(index).getId(), index));
         List<Vet> result = entityManager
-            .createQuery("select vet from Vet vet left join fetch vet.specialties where vet in :vets", Vet.class)
+            .createQuery("select vet from Vet vet left join fetch vet.specialtieses where vet in :vets", Vet.class)
             .setParameter(VETS_PARAMETER, vets)
             .getResultList();
-        Collections.sort(result, (o1, o2) -> Integer.compare(order.get(o1.getId()), order.get(o2.getId())));
+        result.sort((o1, o2) -> Integer.compare(order.get(o1.getId()), order.get(o2.getId())));
         return result;
     }
 }
